app/assets/stylesheets/application.scss
@import "bootstrap-sprockets";
@import "bootstrap";

@import "animate.css";
html{
  position:relative; 
  min-height: 100%;
}
.noDecoration{
	text-decoration: none;
}
.icon-bar{
	background-color: #011627;
}
.logo{
	border: 3px solid #011627;
	padding: 0.25em 3em;
	font-family: "Bradley Hand";
	width:30rem;
	margin:2rem 0 2rem 0;
	font-size:2rem;
	color:#050505;
	text-align:center;
	display:inline-block;
}
.nav-links{
	color:#011627;
	font-size: 0.85em;
	margin: 2em 3em;
	padding: 1em 2em;
	float:right;
	font-family: "Bradley Hand";

	
	

}
.fontBradley{
	font-family: "Bradley Hand";
}
.fontLato{
	font-family: 'Lato', sans-serif;
}
.nav-links a{
	text-decoration: none;
	color:#011627;
	margin: 0.7em;
	font-size:	1.1em;
}
*{
	box-sizing: border-box;
}

.clearfix{
	overflow: auto;
}
.wrapper{
	width:90%;
	margin: 2em auto;
	text-align:center;
}
.col-1,.col-2,.col-3{
	color:#011627;
	float:left;
	text-align:left;
}
.col-1{

	width:30em;
	padding:0 5% 0 2.5%;

}
.col-2{
	width:25em;
	padding:0 5% 0 2.5%;

}
.col-3{
	width:25em;
	padding:0 5% 0 2.5%;

}
.hr-special{
	display:block;
	height:2px;
	border: 2px solid #e71d36;
}

.projectViews{
	height:30rem;
	font-size:3rem;
	background-color:white;
	text-align:center;
	padding:2rem;
}
.projectViews:hover{
	background-color:#CFD8DC;
	color:white;
	
}
.postViews{
	border-radius: 0.5rem;
	border:2px solid #e2e2e2;
	margin:0.2rem;
	padding:0em;
	display:inline-block;
	width:90%;
	background-color:white;
}
.postViews:hover{
	background-color:#f2f2f2;
	box-shadow: 4px 4px 4px 4px #e2e2e2;
}
.eventViews{
	border-radius: 1rem;
	border:2px solid #e2e2e2;
	margin:1.5rem;
	display:inline-block;
	width:90%;

	background-color:white;
}
.eventViews:hover{
	box-shadow: 4px 4px 4px 4px #e2e2e2;
}
a{
	color:#2EC4B6;
}
a:hover{
	color:#011627;
	text-decoration:none;
}

.footer {

	position:absolute;
	bottom: 0rem;
	width:100%;
	height:80px;
	background-color:#2EC4B6;
	padding:1rem;
	left: 0;

}
#notification{
	position:absolute;
	width:100%;
	text-align:center;
	height:3em;
	opacity:0.7;
	background-color:white;
	font-size:2rem;
}
hr-2{
	display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid black;
    margin: 1em 0;
    padding: 0;
}

body{
	background-color:white;
}
textarea{
	resize:none;
}
.checkitoutbtn{
	background-color:#2EC4B6;
}

#menu-toggle {
    z-index: 1;
    position: fixed;
    top: 0;
    right: 0;
    margin:1rem;
    background-color:#d04c3f;
    z-index:10000;
}
.btn {
  border-radius: 0 !important;
}
#top{
	background-color:#f9f6d7;
	height:750px;	
	text-align:center;
	top:0;
	right:0;
	width:100%;
}
#middle{
	background-color:#f5f5f5;
	height:750px;	
	text-align:center;
	top:0;
	right:0;
	width:100%;
}
#services{
	background-color:white;
	min-height:750px;	
	text-align:center;
	top:0;
	right:0;
	width:100%;
}
#bottom{
	background-color:#2EC4B6;
	min-height:750px;	
	text-align:center;
	padding-bottom:3rem;
	top:0;
	right:0;
	width:100%;
}
.morebtn{
	background-color:#d04c3f;
	color:black;
	font-size:3rem;
	padding:1rem;
	font-weight:700;
	border: 0px
}
.checkbtn{
	background-color:#d04c3f;
	color:black;
	font-size:2rem;
	padding:0.8rem;
	font-weight:500;
	border:3px solid black;

}

.whoami-middle{
	font-size:5rem;
	font-weight:700;
	color:#353535;
	letter-spacing:0.5rem
}
ul li{
	text-decoration: none;
}
#mainmenu{
	font-size:5rem;
	background-color:#d04c3f;
	width:100%;
	height:800px;
	top:0;
	opacity:0;
	position:fixed;
	z-index:9999;
	text-align:center;
	padding:14rem 0 14rem 0;
	font-weight:500;
	display:none;
}
#mainmenu p a{
	color:black;

	
}
#mainmenu p a:hover{
	color:#2EC4B6;
	text-decoration:none;
}
.shadow {
    -webkit-box-shadow: 0px 0px 10px 5px black;
    -moz-box-shadow: 0px 10px 5px 5px black;
    box-shadow: 0px 0px 10px 5px black;
    -webkit-transition: all 0.2s linear;
    -o-transition: all 0.2s linear;
    -moz-transition: all 0.2s linear;
    -ms-transition: all 0.2s linear;
    -kthtml-transition: all 0.2s linear;
    transition: all 0.2s linear;
}
.digg_pagination {
  background: white;
  cursor: default;
  /* self-clearing method: */ }
  .digg_pagination a, .digg_pagination span, .digg_pagination em {
    padding: 0.2em 0.5em;
    display: block;
    float: left;
    margin-right: 1px; }
  .digg_pagination .disabled {
    color: #999999;
    border: 1px solid #dddddd; }
  .digg_pagination .current {
    font-style: normal;
    font-weight: bold;
    background: #d04c3f;
    color: white;
    border: 1px solid #d04c3f; }
  .digg_pagination a {
    text-decoration: none;
    color: black;
    border: 1px solid black; }
    .digg_pagination a:hover, .digg_pagination a:focus {
      color: black;
      border-color: black; }
  .digg_pagination .page_info {
    background: black;
    color: white;
    padding: 0.4em 0.6em;
    width: 22em;
    margin-bottom: 0.3em;
    text-align: center; }
    .digg_pagination .page_info b {
      color: black;
      background: black;
      padding: 0.1em 0.25em; }
  .digg_pagination:after {
    content: ".";
    display: block;
    height: 0;
    clear: both;
    visibility: hidden; }
  * html .digg_pagination {
    height: 1%; }
  *:first-child + html .digg_pagination {
    overflow: hidden; }

.skills1{

	display:block;


}
.skills2{
	display:block;
	
}

.body-container{
	width:100%;
	right:0;
}

.me-img{
	height:300px;
	width:300px;
}
.index-article-title{
	float:left;
	font-size:2.5rem;
	margin:0 0 0 3rem;
}
@media (max-width:10000px) and (min-width:854px){
	.skill{
		display:inline-block;
		margin:1rem;
		font-size:2rem;
		font-weight:500;
		height:35rem;

	}
	.my-description{
		margin:0 auto;
		width:400px;
		text-align:left;
	}
	.my-description-sentences{
		font-size:1.5rem;
	}
	.skill-img{
		margin:1rem;
		height:120px;
		width:120px;
	}

	.skill-description{
		font-size:1.5rem;
		width:42rem;
		font-weight:200;

	}
	.titles{
		font-size:5rem;
		font-weight:600;
	}
	.indexproject{
		width:33rem;
		height:23rem;
		background-color:white;
		display:inline-block;
		margin:1.5rem;
		float:left;
		-webkit-transition: all 0.2s linear;
	    -o-transition: all 0.2s linear;
	    -moz-transition: all 0.2s linear;
	    -ms-transition: all 0.2s linear;
	    -kthtml-transition: all 0.2s linear;
	    transition: all 0.2s linear;
		
	}
	.indexproject-title{
		color:black;
		font-weight:700;
		font-size:2.5rem;
	}
	.descriptiondiv{
		text-align:left;
		padding:1rem;
		font-size:2rem;
		color:#263238;
	}
}
@media (max-width:853px) and (min-width:440px){
	.skill{
	display:inline-block;
	margin:1rem;
	font-size:2rem;
	font-weight:500;
	height:35rem;

	}
	.my-description{
		margin:0 auto;
		width:400px;
		text-align:left;
	}
	.my-description-sentences{
		font-size:1.3rem;
	}
	.skill-img{
		margin:1rem;
		height:120px;
		width:120px;
	}

	.skill-description{
		font-size:1.2rem;
		width:42rem;
		font-weight:200;

	}
	.titles{
		font-size:3.5rem;
		font-weight:600;
	}
	.indexproject{
		width:33rem;
		height:23rem;
		background-color:white;
		margin:1.3rem auto;
		-webkit-transition: all 0.2s linear;
	    -o-transition: all 0.2s linear;
	    -moz-transition: all 0.2s linear;
	    -ms-transition: all 0.2s linear;
	    -kthtml-transition: all 0.2s linear;
	    transition: all 0.2s linear;
		
	}
	.indexproject-title{
			color:black;
			font-weight:700;
			font-size:2.5rem;
	}
	.descriptiondiv{
		text-align:left;
		padding:1rem;
		font-size:2rem;
		color:#263238;
	}
}
@media (max-width:439px) and (min-width:300px){
	.skill{
	display:inline-block;
	margin:1rem;
	font-size:2rem;
	font-weight:500;
	height:35rem;

	}
	.my-description{
		margin:0 auto;
		width:300px;
		text-align:left;
	}
	.my-description-sentences{
		font-size:1.1rem;
	}
	.skill-img{
		margin:1rem;
		height:120px;
		width:120px;
	}

	.skill-description{
		font-size:1.2rem;
		width:30rem;
		font-weight:200;


	}
	.titles{
		font-size:3rem;
		font-weight:600;
	}
	.indexproject{
		width:25rem;
		height:18rem;
		background-color:white;
		margin:1rem auto;
		-webkit-transition: all 0.2s linear;
	    -o-transition: all 0.2s linear;
	    -moz-transition: all 0.2s linear;
	    -ms-transition: all 0.2s linear;
	    -kthtml-transition: all 0.2s linear;
	    transition: all 0.2s linear;
	
	}
	.indexproject-title{
		color:black;
		font-weight:700;
		font-size:1.8rem;
	}
	.descriptiondiv{
		text-align:left;
		padding:1rem;
		font-size:1rem;
		color:#263238;
	}
	#mainmenu{
		font-size:3rem;
		background-color:#d04c3f;
		width:100%;
		height:800px;
		top:0;
		opacity:0;
		position:fixed;
		z-index:9999;
		text-align:center;
		padding:14rem 0 14rem 0;
		font-weight:500;
		display:none;
	}
	.me-img{
		height:180px;
		width:180px;
	}
	.index-article-title{
		float:left;
		font-size:1.5rem;
		margin:0 0 0 3rem;
	}
}

